--- a/index.html
+++ b/index.html
@@ -72,7 +72,10 @@
 </div>
 </div>
 </section>
-
+<form name="testing" method="POST" netlify>
+  <label for="mail">Email Address</label>
+  <input type="email" name="mail" id="" placeholder="mail@mail.com">
+</form>
 <div class="credit-cards">
   <i>Pay Using:</i>
   <a href="https://animated-selkie-9bbe19.netlify.app/">
