--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
 <form name="testing" method="POST" netlify>
   <label for="mail">Email Address</label>
   <input type="email" name="mail" id="" placeholder="mail@mail.com">
+  <button type="submit">Send</button>
 </form>
 <div class="credit-cards">
   <i>Pay Using:</i>
